--- a/top_etch-a-sketch/style.css
+++ b/top_etch-a-sketch/style.css
@@ -10,7 +10,7 @@ body {
   background-color: var(--background-color);
 }
 
-.canvasContainer {
+#canvasContainer {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -22,5 +22,14 @@ body {
 .square {
   box-sizing: border-box;
   background-color: white;
-  border: 0.5px solid var(--background-color);
+  border: 0.2px solid var(--background-color);
+}
+
+#optionsContainer {
+  text-align: center;
+  padding-top: 20px;
+}
+
+#gridSizeSlider {
+  accent-color: #767676;
 }
