Refactor controls layout and add grid border option

--- a/top_etch-a-sketch/style.css
+++ b/top_etch-a-sketch/style.css
@@ -22,11 +22,16 @@ body {
 .square {
   box-sizing: border-box;
   background-color: white;
+}
+
+.squareBorder {
   border: 0.2px solid var(--background-color);
 }
 
-#optionsContainer {
+.controls {
+  display: flex;
   text-align: center;
+
   padding-top: 20px;
 }
 
