[Calculator] Add old srt screen effect to display

--- a/top_calculator/style.css
+++ b/top_calculator/style.css
@@ -7,6 +7,9 @@
   --accent: #526342;
 
   --display-color: #060606;
+  --crt-red: rgb(218, 49, 49);
+  --crt-green: rgb(112, 159, 115);
+  --crt-blue: rgb(40, 129, 206);
   --glow-a: #00a292;
   --glow-b: #3db6cb;
 
@@ -91,6 +94,56 @@ body {
   text-shadow: 
     0 0 4.8px var(--glow-a),
     0 0 4.8px var(--glow-b);
+}
+
+.crt {
+  background-color: rgb(25, 25, 30);
+  text-shadow: 0 0 0.2em currentColor, 1px 1px rgba(255, 0, 255, 0.5),
+    -1px -1px rgba(0, 255, 255, 0.4);
+  position: relative;
+  &:before,
+  &:after {
+    content: "";
+    transform: translateZ(0);
+    pointer-events: none;
+    opacity: 0.5;
+    mix-blend-mode: overlay;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    z-index: 1;
+  }
+
+  &:before {
+    background: repeating-linear-gradient(
+      var(--crt-red) 0px,
+      var(--crt-green) 2px,
+      var(--crt-blue) 4px
+    );
+  }
+  &:after {
+    background: repeating-linear-gradient(
+      90deg,
+      var(--crt-red) 1px,
+      var(--crt-green) 2px,
+      var(--crt-blue) 3px
+    );
+  }
+}
+
+.ridges {
+  width: 99%;
+  height: 4px;
+  margin: 10px auto 14px;
+
+  background: #989187;
+  border-radius: 10px;
+
+  box-shadow: 
+  inset 2px 2px 3px #88827a,
+  inset -2px -2px 3px var(--device-color);
 }
 
 .controlPad {
